<resources>
    <string name="app_name">ParkSmart</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="usernam">Username</string>
    <string name="signn_up">Sign up</string>
    <string name="phonee_number">Phone number</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_maps">Map</string>
    <string name="log_in">Log in</string>
    <string name="sign_upp">Sign up</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home_btn</string>
    <string name="location_btn">location_btn</string>
    <string name="payment_btn">payment_btn</string>
    <string name="log_in_as_admin">Log in as Admin</string>
    <string name="log_in2">Log in</string>
    <string name="admin_id">Admin ID</string>
    <string name="admin_password">Admin Password</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="payment">Payment</string>
    <string name="logout">Logout</string>
    <string name="homer">Home</string>
    <string name="map">Map</string>
    <string name="display_users">Display Users</string>
    <string name="get_amazing_offers_on_parking_spaces_around_the_city_today_click_the_button_below_to_get_started">Get amazing offers on parking spaces around the city today. Click the button below to get started</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_parking">Parking</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_amount_to_be_paid">Enter Amount to be Paid</string>
    <string name="make_payment">Make Payment</string>
    <string name="pay_with_paypal">Pay with Paypal</string>
    <string name="vehicle_number">Vehicle number</string>
    <string name="email_parking">Email</string>
    <string name="parking_time">Parking time(Hrs)</string>
    <string name="book">Book</string>
    <string name="enter_location">Enter Location</string>
    <string name="display_slots">Display Slots</string>
    <string name="booking_data">Booking data</string>
    <string name="phone_number1">Phone number</string>
    <string name="password1">Password</string>
    <string name="admin_email">Admin email</string>
    <string name="admin_password1">Admin password</string>
    <string name="kbj">KBJ</string>
    <string name="car_number">Car Number:</string>
    <string name="haille_selassie">Haille selassie</string>
    <string name="park_time_hrs">Park time(Hrs):</string>
    <string name="location">Location:</string>
    <string name="john_yahoo_com">john@yahoo.com</string>
    <string name="email_book">Email:</string>
    <string name="slot_2">Slot 2</string>
    <string name="slot_1">Slot 1</string>
    <string name="slot_3">Slot 3</string>
    <string name="slot_4">Slot 4</string>
    <string name="slot_5">Slot 5</string>
    <string name="slot_6">Slot 6</string>
    <string name="slot_7">Slot 7</string>
    <string name="slot_8">Slot 8</string>
    <string name="slot_9">Slot 9</string>
    <string name="slot_10">Slot 10</string>
    <string name="kbj_964Y">kbj_964Y</string>
    <string name="generate_users_report">Generate users report</string>
    <string name="pay_with_m_pesa">Pay with M-Pesa</string>
    <string name="view_slots">View Slots</string>
    <string name="reports">Reports</string>
    <string name="firebase">Firebase</string>
    <string name="parked_users">Parked Users</string>
    <string name="registered_users">Registered Users</string>
    <string name="_0712345678">0712345678</string>
    <string name="john123">john123</string>
    <string name="phone">Phone number:</string>
    <string name="pass">Password:</string>


</resources>