<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/home_btn"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/homer"/>
        <item
            android:id="@+id/maps_btn"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/map"/>
        <item
            android:id="@+id/pay_btn"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/payment"/>
        <item
            android:id="@+id/logout_btn"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/logout"/>
    </group>
</menu>