<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_book"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_yahoo_com"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john123"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0712345678"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>