<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

<LinearLayout
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center">


 <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_edit_background"
        android:hint="@string/phone_number"
     android:textColorHint="@color/white"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="21sp"
     android:autofillHints="none" />

 <EditText
     android:id="@+id/email"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_marginBottom="10dp"
     android:background="@drawable/login_edit_background"
     android:hint="@string/email"
     android:textColorHint="@color/white"
     android:inputType="textEmailAddress"
     android:padding="10dp"
     android:textColor="@color/white"
     android:textSize="21sp"
     android:autofillHints="none" />

 <EditText
     android:id="@+id/password"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_marginBottom="10dp"
     android:background="@drawable/login_edit_background"
     android:hint="@string/password"
     android:inputType="textPassword"
     android:padding="10dp"
     android:textColorHint="@color/white"
     android:textColor="@color/white"
     android:textSize="21sp"
     android:autofillHints="none" />



 <Button
     android:id="@+id/signup"
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:layout_marginBottom="30dp"
     android:background="@drawable/button_background"
     android:text="@string/sign_up"
     android:textAllCaps="false"
     android:textColor="@color/white"
     android:textSize="21sp"
     />

</LinearLayout>
</RelativeLayout>