<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/admin_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_edit_background"
            android:hint="@string/admin_email"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:autofillHints="Enter phone number" />


        <EditText
        android:id="@+id/admin_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColorHint="@color/white"
        android:layout_marginBottom="10dp"
        android:background="@drawable/login_edit_background"
        android:hint="@string/admin_password1"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:autofillHints="Enter password" />



    <Button
        android:id="@+id/login_admin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background"
        android:text="@string/log_in2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="21sp" />

    </LinearLayout>

</RelativeLayout>