<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParkingActivity"
    android:background="@drawable/login_background">

    <Chronometer
        android:id="@+id/simpleChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableRow1"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="205dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow6"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow8"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow7"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow1" />

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tableRow7" />

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tableRow9" />

    <TableRow
        android:id="@+id/tableRow9"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tableRow8" />

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow10"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow4" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/tableRow9"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3" />

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="157dp"
        android:layout_height="97dp"
        android:layout_marginTop="30dp"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tableRow6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="5dp"
        android:text="@string/slot_1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableRow1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="5dp"
        android:text="@string/slot_2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableRow6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_3"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/slot_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableRow7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_5"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_6"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_7"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slot_8"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/slot_9"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableRow5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/slot_10"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tableRow10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />



</androidx.constraintlayout.widget.ConstraintLayout>